package edu.sandiego.comp305;

public enum Color {
    RED,
    BLACK,
    GREEN
}
