package edu.sandiego.comp305;

public interface CrapsState {
    String handleRoll(int roll, Craps context);
}
