package edu.sandiego.comp305;

public interface Game {

    int handleBet(int amount);

    void playGame();

    void updateBalance(int amountWonOrLost);
}
