package edu.sandiego.comp305;

public enum SlotSymbols {
    CHERRY,
    LEMON,
    GRAPE,
    STRAWBERRY,
    BELL,
    SEVEN,
    GOLD_BAR,
    DIAMOND,
}
