package edu.sandiego.comp305;

enum Suit {
    CLUB,
    HEART,
    DIAMOND,
    SPADE,
}
